finished services page, progress on automation page

--- a/services.html
+++ b/services.html
@@ -39,19 +39,7 @@
         <!-- ******************************* NAVIGATION BAR TWO ************************************** -->
 
         <div id="navbar-two" class="sticky-top"></div>
-	
-
-		<!-- ******************************* HEADING ************************************** -->
-		<!-- <br><br><br><br>
-		<div class="container">
-			<div class="featurette-heading">
-				<h5 class="sub-heading">Solutions</h5>
-				<h2 class="fw-normal lh-1 main-heading">Services</h2>
-			</div>
-
-			<div class="divider-dash"></div> 
-			
-		</div> <br><br> -->
+		
 
         <!-- ******************************* VIDEO AND DESCRIPTION ************************************** -->
 
@@ -62,7 +50,7 @@
             <div class="row featurette">
 
                 <!-- text -->
-                <div class="col-md-6 order-md-3">
+                <div class="col-lg-6 order-lg-3">
 
                     <!-- heading -->
                     <div class="featurette-heading">
@@ -78,10 +66,10 @@
                 </div>
 
                 <!-- column for spacing -->
-                <div class="empty-column col-md-1 order-md-2"></div>
+                <div class="empty-column col-lg-1 order-lg-2"></div>
 
                 <!-- image -->
-                <div class="col-md-5 order-md-1">
+                <div class="col-lg-5 order-lg-1">
 					<div class="embed-responsive embed-responsive-1by1">
 						<iframe src="https://www.youtube.com/embed/7Vm3HTmoxm0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
@@ -96,21 +84,23 @@
         <!-- ******************************* STANDARDS ************************************** -->
 
 		<blockquote class="blockquote text-center">
-			<p>Comprehensive Support to Meet the Service Demands of Today and Tomorrow.</p>
-
-		  </blockquote>
+			<p>Comprehensive support to meet the service demands of today and tomorrow.</p>
+			<div class="divider-dash-white mx-auto"></div> 
+		</blockquote>
 
 		<br><br><br><br><br><br><br>
+
+
         <!-- ******************************* SERVICES ************************************** -->
 
 		<!-- SERVICE -->
 		<div class="container">
 			<div class="row">
-			  <div class="col-12 col-md-6 order-md-2 service-image ">
-				  <img src="images/service.png" alt="" class="w-100 h-100">
+			  <div class="col-12 col-lg-6 order-lg-2 service-image ">
+				  <img src="images/services-page/service.png" alt="" class="w-100 h-100">
 			  </div>
 
-			  <div class="col-12 col-md-6 order-md-1 service-text">
+			  <div class="col-12 col-lg-6 order-lg-1 service-text">
 				<!-- heading -->
 				<h2 class="service-heading">Tiered Service Support</h2>
 				<div class="divider-dash"></div> 
@@ -127,11 +117,11 @@
 		<!-- SERVICE -->
 		<div class="container">
 			<div class="row">
-			  <div class="col-12 col-md-6 order-md-1 service-image">
-				  <img src="images/service.png" alt="" class="w-100 h-100">
+			  <div class="col-12 col-lg-6 order-lg-1 service-image">
+				  <img src="images/services-page/service.png" alt="" class="w-100 h-100">
 			  </div>
 
-			  <div class="col-12 col-md-6 order-md-2 service-text">
+			  <div class="col-12 col-lg-6 order-lg-2 service-text">
 				<!-- heading -->
 				<h2 class="service-heading">Tiered Service Support</h2>
 				<div class="divider-dash"></div> 
@@ -148,11 +138,11 @@
 		<!-- SERVICE -->
 		<div class="container">
 			<div class="row">
-			  <div class="col-12 col-md-6 order-md-2 service-image">
-				  <img src="images/service.png" alt="" class="w-100 h-100">
+			  <div class="col-12 col-lg-6 order-lg-2 service-image">
+				  <img src="images/services-page/service.png" alt="" class="w-100 h-100">
 			  </div>
 
-			  <div class="col-12 col-md-6 order-md-1 service-text">
+			  <div class="col-12 col-lg-6 order-lg-1 service-text">
 				<!-- heading -->
 				<h2 class="service-heading">Tiered Service Support</h2>
 				<div class="divider-dash"></div> 
@@ -169,11 +159,11 @@
 		<!-- SERVICE -->
 		<div class="container">
 			<div class="row">
-			  <div class="col-12 col-md-6 order-md-1 service-image">
-				  <img src="images/service.png" alt="" class="w-100 h-100">
+			  <div class="col-12 col-lg-6 order-lg-1 service-image">
+				  <img src="images/services-page/service.png" alt="" class="w-100 h-100">
 			  </div>
 
-			  <div class="col-12 col-md-6 order-md-2 service-text">
+			  <div class="col-12 col-lg-6 order-lg-2 service-text">
 				<!-- heading -->
 				<h2 class="service-heading">Tiered Service Support</h2>
 				<div class="divider-dash"></div> 
@@ -186,7 +176,7 @@
 			  
 			</div>
 		</div>
-		<br><br><br><br>
+		<br><br><br><br><br><br>
 		  
 		<!-- ******************************* LOGOS ************************************** -->
 		
@@ -200,6 +190,24 @@
 			
 			<p class="description">We adhere to the top industry standards.
 			</p>
+
+			<div class="row">
+				<div class="col-12 col-md-6 col-lg-3">
+					<img src="images/services-page/ISTAlogo.jpg" alt="" class="mx-auto d-block">
+				</div>
+
+				<div class="col-12 col-md-6 col-lg-3">
+					<img src="images/services-page/ASTMlogo.jpg" alt="" class="mx-auto d-block">
+				</div>
+
+				<div class="col-12 col-md-6 col-lg-3">
+					<img src="images/services-page/EumosLogo.jpg" alt="" class="mx-auto d-block">
+				</div>
+
+				<div class="col-12 col-md-6 col-lg-3">
+					<img src="images/services-page/AARlogo.jpg" alt="" class="mx-auto d-block">
+				</div>
+			</div>
 			
 		</div> <br><br>
 
