--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
 
 		</div>
 
+		<div class="container-fluid">
 		<!-- testimonials carousel -->
 		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 
@@ -374,6 +375,7 @@
 				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
 			</ol>
+
 			<div class="carousel-inner">
 
 			<!-- TESTIMONIAL PAGE -->
@@ -391,13 +393,13 @@
 
 							<!-- testimonial text -->
 							<div id="testimonial-text">
-								“When I want quality products, I always go to Signode. Their materials are excellent, their service is great, and their co-op students are the best in the industry.”
+								“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.”
 							</div>
 							<br>
 
 							<div id="testimonial-source">
 								<div class="name"><b>&mdash; John Doe</b></div>
-								<div class="company">Signode Canada</div>
+								<div class="company">Company Name</div>
 							</div>
 						</div>
 
@@ -411,13 +413,13 @@
 
 							<!-- testimonial text -->
 							<div id="testimonial-text">
-								“When I want quality products, I always go to Signode. Their materials are excellent, their service is great, and their co-op students are the best in the industry.”
+								“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.”
 							</div>
 							<br>
 
 							<div id="testimonial-source">
 								<div class="name"><b>&mdash; John Doe</b></div>
-								<div class="company">Signode Canada</div>
+								<div class="company">Company Name</div>
 							</div>
 						</div>
 
@@ -431,13 +433,13 @@
 
 							<!-- testimonial text -->
 							<div id="testimonial-text">
-								“When I want quality products, I always go to Signode. Their materials are excellent, their service is great, and their co-op students are the best in the industry.”
+								“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.”
 							</div>
 							<br>
 
 							<div id="testimonial-source">
 								<div class="name"><b>&mdash; John Doe</b></div>
-								<div class="company">Signode Canada</div>
+								<div class="company">Company Name</div>
 							</div>
 						</div>
 
@@ -598,6 +600,7 @@
 
 		
 		</div>
+	</div>
 
 		<br><br><br><br><br><br>
 		
