fixed inconsistent heights in automation video carousel

--- a/automation.html
+++ b/automation.html
@@ -150,7 +150,7 @@
 				<div class="carousel-item active">
 					<div class="row">
 						<div class="col col-left-video">
-							<iframe class="w-100" height="400" src="https://www.youtube.com/embed/4XO-hojiTWw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe class="w-100 h-100" src="https://www.youtube.com/embed/4XO-hojiTWw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 						<div class="col-12 col-lg-6 col-right-text d-flex flex-column justify-content-center align-items-start">
 							<h2 class="automation-feature-header">Discover our end-of-line packaging solutions</h2>
@@ -161,9 +161,9 @@
 				  </div>
 
 			  <div class="carousel-item">
-				  <div class="row">
+				  <div class="row row-eq-height">
 					  <div class="col-12 col-lg-6 col-left-video">
-						  <iframe class="w-100" height="400px" src="https://www.youtube.com/embed/Ay6UTgOP26g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						  <iframe class="w-100 h-100" src="https://www.youtube.com/embed/Ay6UTgOP26g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					  </div>
 					  <div class="col-12 col-lg-6 col-right-text d-flex flex-column justify-content-center align-items-start">
 						<h2 class="automation-feature-header">Discover our end-of-line packaging solutions</h2>
@@ -176,7 +176,7 @@
 			  <div class="carousel-item">
 				<div class="row">
 					<div class="col col-left-video">
-						<iframe class="w-100" height="400" src="https://www.youtube.com/embed/TuTmrHF_tOI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe class="w-100 h-100" height="400" src="https://www.youtube.com/embed/TuTmrHF_tOI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<div class="col-12 col-lg-6 col-right-text d-flex flex-column justify-content-center align-items-start">
 						<h2 class="automation-feature-header">Discover our end-of-line packaging solutions</h2>
@@ -189,7 +189,7 @@
 			  <div class="carousel-item">
 				<div class="row">
 					<div class="col col-left-video">
-						<iframe class="w-100" height="400" src="https://www.youtube.com/embed/ujByr-41z4s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe class="w-100 h-100" height="400" src="https://www.youtube.com/embed/ujByr-41z4s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<div class="col-12 col-lg-6 col-right-text d-flex flex-column justify-content-center align-items-start">
 						<h2 class="automation-feature-header">Discover our end-of-line packaging solutions</h2>
