finished updating all industry pages

--- a/pages-company/brands.html
+++ b/pages-company/brands.html
@@ -13,7 +13,7 @@
 		<script src="https://kit.fontawesome.com/065b6a01b6.js" crossorigin="anonymous"></script>
 
 		<!-- external stylesheet -->
-		<link rel="stylesheet" href="css/styles-brands-page.css" />
+		<link rel="stylesheet" href="../css/styles-brands-page.css" />
 
 		<!-- JQuery -->
 		<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -22,9 +22,9 @@
 
 		<script>
 			$(function () {
-				$("#navbar-one").load("partials/navbar-one.html");
-				$("#navbar-two").load("partials/navbar-two.html");
-				$("#footer").load("partials/footer.html");
+				$("#navbar-one").load("../partials/navbar-one.html");
+				$("#navbar-two").load("../partials/navbar-two.html");
+				$("#footer").load("../partials/footer.html");
 			});
 		</script>
 	</head>
@@ -60,242 +60,242 @@
 				<!-- Gallery item -->
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://www.signode.ca" target="_blank"><img src="images/brands-page/signode-logo.png" alt="signode-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://www.signode.ca" target="_blank"><img src="../images/brands-page/signode-logo.png" alt="signode-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://www.aiateam.com" target="_blank"><img src="images/brands-page/aia.png" alt="AIA-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://www.aiateam.com" target="_blank"><img src="../images/brands-page/aia.png" alt="AIA-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<!-- WILL LINK LATER DOESNT HAVE ITS OWN WEBSITE INSTEAD LINK TO A PAGE TALKING ABOUT ANGLEBOARD -->
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="#"><img src="images/brands-page/angleboard.png" alt="angleboard-logo" class="img-fluid card-img-top" /></a>
+						<a href="#"><img src="../images/brands-page/angleboard.png" alt="angleboard-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://www.bates-cargopak.com/" target="_blank"><img src="images/brands-page/bates-cargo-pak.png" alt="bates-cargo-pak-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://www.bates-cargopak.com/" target="_blank"><img src="../images/brands-page/bates-cargo-pak.png" alt="bates-cargo-pak-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="#"><img src="images/brands-page/h-bohl.png" alt="h.bohl-logo" class="img-fluid card-img-top" /></a>
+						<a href="#"><img src="../images/brands-page/h-bohl.png" alt="h.bohl-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://www.caretex.dk" target="_blank"><img src="images/brands-page/caretex.png" alt="caretex-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://www.caretex.dk" target="_blank"><img src="../images/brands-page/caretex.png" alt="caretex-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://www.celcor.ca" target="_blank"><img src="images/brands-page/celcor.png" alt="celcor-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://www.celcor.ca" target="_blank"><img src="../images/brands-page/celcor.png" alt="celcor-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://www.dacro.nl/en" target="_blank"><img src="images/brands-page/dacro.png" alt="dacro-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://www.dacro.nl/en" target="_blank"><img src="../images/brands-page/dacro.png" alt="dacro-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="#"><img src="images/brands-page/down-river.png" alt="down-river-logo" class="img-fluid card-img-top" /></a>
+						<a href="#"><img src="../images/brands-page/down-river.png" alt="down-river-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://fleetsig.com/" target="_blank"><img src="images/brands-page/fleetwood.png" alt="fleetwood-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://fleetsig.com/" target="_blank"><img src="../images/brands-page/fleetwood.png" alt="fleetwood-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="http://www.formambalaj.com.tr/en/products/packaging-solutions" target="_blank"><img src="images/brands-page/form.png" alt="form-logo" class="img-fluid card-img-top" /></a>
+						<a href="http://www.formambalaj.com.tr/en/products/packaging-solutions" target="_blank"><img src="../images/brands-page/form.png" alt="form-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="#"><img src="images/brands-page/galewrap.png" alt="galewrap-logo" class="img-fluid card-img-top" /></a>
+						<a href="#"><img src="../images/brands-page/galewrap.png" alt="galewrap-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="http://www.globoplastt.com/en/" target="_blank"><img src="images/brands-page/globoplastt.png" alt="globoplastt-logo" class="img-fluid card-img-top" /></a>
+						<a href="http://www.globoplastt.com/en/" target="_blank"><img src="../images/brands-page/globoplastt.png" alt="globoplastt-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="#"><img src="images/brands-page/grip-pack.png" alt="grip-pack-logo" class="img-fluid card-img-top" /></a>
+						<a href="#"><img src="../images/brands-page/grip-pack.png" alt="grip-pack-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://gunther-packaging.com/en/accueil/" target="_blank"><img src="images/brands-page/gunther-packaging.png" alt="gunther-packaging-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://gunther-packaging.com/en/accueil/" target="_blank"><img src="../images/brands-page/gunther-packaging.png" alt="gunther-packaging-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://www.insulatedtransportproducts.com/" target="_blank"><img src="images/brands-page/insulated-transport.png" alt="insulated-transport-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://www.insulatedtransportproducts.com/" target="_blank"><img src="../images/brands-page/insulated-transport.png" alt="insulated-transport-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://kihlberg.com/en/" target="_blank"><img src="images/brands-page/josef-kihlberg.png" alt="josef-kihlberg-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://kihlberg.com/en/" target="_blank"><img src="../images/brands-page/josef-kihlberg.png" alt="josef-kihlberg-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://lachenmeier.us/" target="_blank"><img src="images/brands-page/lachenmeier.png" alt="lachenmeier-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://lachenmeier.us/" target="_blank"><img src="../images/brands-page/lachenmeier.png" alt="lachenmeier-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://www.loveshaw.com/" target="_blank"><img src="images/brands-page/littledavid.png" alt="littledavid-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://www.loveshaw.com/" target="_blank"><img src="../images/brands-page/littledavid.png" alt="littledavid-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="#" target="_blank"><img src="images/brands-page/lock-n-pop.png" alt="lock-n-pop-logo" class="img-fluid card-img-top" /></a>
+						<a href="#" target="_blank"><img src="../images/brands-page/lock-n-pop.png" alt="lock-n-pop-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://www.mezger.eu/startseite_en.html" target="_blank"><img src="images/brands-page/mg-mezger.png" alt="mg-mezger-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://www.mezger.eu/startseite_en.html" target="_blank"><img src="../images/brands-page/mg-mezger.png" alt="mg-mezger-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="#" target="_blank"><img src="images/brands-page/mima-films.png" alt="mima-films" class="img-fluid card-img-top" /></a>
+						<a href="#" target="_blank"><img src="../images/brands-page/mima-films.png" alt="mima-films" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="http://www.miptools.com/default.aspx" target="_blank"><img src="images/brands-page/mip.png" alt="mip-logo" class="img-fluid card-img-top" /></a>
+						<a href="http://www.miptools.com/default.aspx" target="_blank"><img src="../images/brands-page/mip.png" alt="mip-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="#"><img src="images/brands-page/multi-wall.png" alt="multi-wall" class="img-fluid card-img-top" /></a>
+						<a href="#"><img src="../images/brands-page/multi-wall.png" alt="multi-wall" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://signodestretchwrapping.com/" target="_blank"><img src="images/brands-page/octopus.png" alt="octopus-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://signodestretchwrapping.com/" target="_blank"><img src="../images/brands-page/octopus.png" alt="octopus-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="#"><img src="images/brands-page/packaging-plus.png" alt="packaging-plus-logo" class="img-fluid card-img-top" /></a>
+						<a href="#"><img src="../images/brands-page/packaging-plus.png" alt="packaging-plus-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="#"><img src="images/brands-page/pdm.png" alt="pdm" class="img-fluid card-img-top" /></a>
+						<a href="#"><img src="../images/brands-page/pdm.png" alt="pdm" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="#"><img src="images/brands-page/plastic-packaging.png" alt="plastic-packaging-logo" class="img-fluid card-img-top" /></a>
+						<a href="#"><img src="../images/brands-page/plastic-packaging.png" alt="plastic-packaging-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="#"><img src="images/brands-page/prime-bulk.png" alt="prime-bulk-logo" class="img-fluid card-img-top" /></a>
+						<a href="#"><img src="../images/brands-page/prime-bulk.png" alt="prime-bulk-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="#"><img src="images/brands-page/reddi-pac.png" alt="reddi-pac-logo" class="img-fluid card-img-top" /></a>
+						<a href="#"><img src="../images/brands-page/reddi-pac.png" alt="reddi-pac-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="#"><img src="images/brands-page/shippers.png" alt="shippers-logo" class="img-fluid card-img-top" /></a>
+						<a href="#"><img src="../images/brands-page/shippers.png" alt="shippers-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://www.silawrap.ie/" target="_blank"><img src="images/brands-page/silawrap.png" alt="silawrap-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://www.silawrap.ie/" target="_blank"><img src="../images/brands-page/silawrap.png" alt="silawrap-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://www.simplimatic.com/" target="_blank"><img src="images/brands-page/simplimatic.png" alt="simplimatic-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://www.simplimatic.com/" target="_blank"><img src="../images/brands-page/simplimatic.png" alt="simplimatic-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://www.smb.biz/" target="_blank"><img src="images/brands-page/smb.png" alt="smb-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://www.smb.biz/" target="_blank"><img src="../images/brands-page/smb.png" alt="smb-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://stopak.com/" target="_blank"><img src="images/brands-page/stopak.png" alt="stopak-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://stopak.com/" target="_blank"><img src="../images/brands-page/stopak.png" alt="stopak-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="#"><img src="images/brands-page/storfast.png" alt="storfast.png" class="img-fluid card-img-top" /></a>
+						<a href="#"><img src="../images/brands-page/storfast.png" alt="storfast.png" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://www.strapex.com/desktopdefault.aspx" target="_blank"><img src="images/brands-page/strapex.png" alt="strapex-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://www.strapex.com/desktopdefault.aspx" target="_blank"><img src="../images/brands-page/strapex.png" alt="strapex-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://syntexbag.com/c/" target="_blank"><img src="images/brands-page/syntex.png" alt="syntex-logo" class="img-fluid card-img-top" /></a>
+						<a href="https://syntexbag.com/c/" target="_blank"><img src="../images/brands-page/syntex.png" alt="syntex-logo" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://www.vac-bv.nl/" target="_blank"><img src="images/brands-page/van-antwerpen.png" alt="van-antwerpen.png" class="img-fluid card-img-top" /></a>
+						<a href="https://www.vac-bv.nl/" target="_blank"><img src="../images/brands-page/van-antwerpen.png" alt="van-antwerpen.png" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 
 				<div class="col-xl-4 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm border-dark">
-						<a href="https://www.signodeindia.com/products/products_consumables_labels.html" target="_blank"><img src="images/brands-page/wintek.png" alt="wintek.png" class="img-fluid card-img-top" /></a>
+						<a href="https://www.signodeindia.com/products/products_consumables_labels.html" target="_blank"><img src="../images/brands-page/wintek.png" alt="wintek.png" class="img-fluid card-img-top" /></a>
 					</div>
 				</div>
 			</div>
