--- a/services.html
+++ b/services.html
@@ -70,6 +70,7 @@
 
                 <!-- image -->
                 <div class="col-lg-5 order-lg-1">
+					<!-- <img src="images/home-page/what-we-do.jpg" alt="" class="w-100"> -->
 					<div class="embed-responsive embed-responsive-1by1">
 						<iframe src="https://www.youtube.com/embed/7Vm3HTmoxm0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
