--- a/automation.html
+++ b/automation.html
@@ -8,7 +8,6 @@
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-
 		<!-- Font awesome icons -->
 		<script src="https://kit.fontawesome.com/065b6a01b6.js" crossorigin="anonymous"></script>
 
@@ -150,7 +149,9 @@
 				<div class="carousel-item active">
 					<div class="row">
 						<div class="col col-left-video">
-							<iframe class="w-100 h-100" src="https://www.youtube.com/embed/4XO-hojiTWw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" data-toggle="lightbox">Justin Bieber - Love Yourselfdwadwadwadadwadwadwadawdaddw</a></p>
+
+							<!-- <iframe class="w-100 h-100" src="https://www.youtube.com/embed/4XO-hojiTWw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 						</div>
 						<div class="col-12 col-lg-6 col-right-text d-flex flex-column justify-content-center align-items-start">
 							<h2 class="automation-feature-header">Discover our end-of-line packaging solutions</h2>
@@ -320,7 +321,9 @@
 		<!-- ******************************* JAVASCRIPT ************************************** -->
 
 		<!-- Bootstrap JavaScript -->
+
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 	</body>
 </html>
