--- a/automation.html
+++ b/automation.html
@@ -13,6 +13,8 @@
 
 		<!-- external stylesheet -->
 		<link rel="stylesheet" href="css/styles-automation-page.css" />
+		<link rel="stylesheet" href="venobox/venobox.min.css" type="text/css" media="screen" />
+
 
 		<!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -25,6 +27,8 @@
                 $('#navbar-two').load('partials/navbar-two.html');
                 $('#footer').load('partials/footer.html');
             });
+
+			$('.venobox').venobox();
         </script>
     </head>
 
@@ -324,6 +328,8 @@
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+		<script type="text/javascript" src="venobox/venobox.min.js"></script>
 
 	</body>
 </html>
