added lightbox and applied it to services page

--- a/automation.html
+++ b/automation.html
@@ -13,7 +13,7 @@
 
 		<!-- external stylesheet -->
 		<link rel="stylesheet" href="css/styles-automation-page.css" />
-		<link rel="stylesheet" href="venobox/venobox.min.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="venobox/dist/venobox.min.css" />
 
 
 		<!-- JQuery -->
@@ -27,8 +27,6 @@
                 $('#navbar-two').load('partials/navbar-two.html');
                 $('#footer').load('partials/footer.html');
             });
-
-			$('.venobox').venobox();
         </script>
     </head>
 
@@ -146,15 +144,14 @@
 
 
 		<!-- ******************************* VIDEOS ************************************** -->
-
 		<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 			<div class="carousel-inner">
 
 				<div class="carousel-item active">
 					<div class="row">
 						<div class="col col-left-video">
-							<p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" data-toggle="lightbox">Justin Bieber - Love Yourselfdwadwadwadadwadwadwadawdaddw</a></p>
-
+							<a class="my-video-links" data-autoplay="true" data-vbtype="video" href="https://www.youtube.com/watch?v=mrvWHfH5pm0">Youtubeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</a>
+							
 							<!-- <iframe class="w-100 h-100" src="https://www.youtube.com/embed/4XO-hojiTWw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 						</div>
 						<div class="col-12 col-lg-6 col-right-text d-flex flex-column justify-content-center align-items-start">
@@ -329,7 +326,11 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js" integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-		<script type="text/javascript" src="venobox/venobox.min.js"></script>
-
+		<script src="venobox/dist/venobox.min.js"></script>
+		<script>
+			new VenoBox({
+ 				selector: '.venobox'
+			});
+		</script>
 	</body>
 </html>
