--- a/services.html
+++ b/services.html
@@ -18,6 +18,12 @@
 		<!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
+		<!-- lightbox -->
+		<link rel="stylesheet" href="node_modules/lightbox2/dist/css/lightbox.min.css">
+    
+		<!-- venobox -->
+		<link rel="stylesheet" href="node_modules/venobox/dist/venobox.min.css" />
+
         <title>Signode Canada</title>
 
         <script>
@@ -70,10 +76,9 @@
 
                 <!-- image -->
                 <div class="col-lg-5 order-lg-1">
-					<!-- <img src="images/home-page/what-we-do.jpg" alt="" class="w-100"> -->
-					<div class="embed-responsive embed-responsive-1by1">
-						<iframe src="https://www.youtube.com/embed/7Vm3HTmoxm0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					</div>
+					<a class="venobox" data-autoplay="true" data-vbtype="video" href="https://youtu.be/7Vm3HTmoxm0">
+						<img src="images/services-page/video-thumbnail.png" alt="" class="venobox-placeholder-image w-100">
+					  </a>
                 </div>
             </div>
 
@@ -221,6 +226,20 @@
 
 		<!-- Bootstrap JavaScript -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+		<!-- lightbox js -->
+		<script src="node_modules/lightbox2/dist/js/lightbox-plus-jquery.min.js"></script>
+
+		<!-- venobox js -->
+		<script src="node_modules/venobox/dist/venobox.min.js"></script>
+	
+		<script>
+		  new VenoBox({
+			selector: '.venobox',
+			maxWidth: '70%',
+			spinner: 'wander'
+		  });
+		</script>
 
 	</body>
 </html>
