--- a/services.html
+++ b/services.html
@@ -74,11 +74,16 @@
                 <!-- column for spacing -->
                 <div class="empty-column col-lg-1 order-lg-2"></div>
 
-                <!-- image -->
-                <div class="col-lg-5 order-lg-1">
+                <div class="col-lg-5 order-lg-1 text-center my-auto image-column">
+					<!-- video -->
 					<a class="venobox" data-autoplay="true" data-vbtype="video" href="https://youtu.be/7Vm3HTmoxm0">
+						<!-- placeholder image -->
 						<img src="images/services-page/video-thumbnail.png" alt="" class="venobox-placeholder-image w-100">
-					  </a>
+
+						<!-- play icon -->
+						<i class="fa-regular fa-circle-play play-button"></i>
+					</i>
+					</a>
                 </div>
             </div>
 
@@ -227,12 +232,13 @@
 		<!-- Bootstrap JavaScript -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
-		<!-- lightbox js -->
+		<!-- Lightbox js -->
 		<script src="node_modules/lightbox2/dist/js/lightbox-plus-jquery.min.js"></script>
 
-		<!-- venobox js -->
+		<!-- Venobox js -->
 		<script src="node_modules/venobox/dist/venobox.min.js"></script>
 	
+		<!-- Venobox script -->
 		<script>
 		  new VenoBox({
 			selector: '.venobox',
